--- a/_config.yml
+++ b/_config.yml
@@ -19,15 +19,15 @@ source-code: https://github.com/CollectionBuilder/collectionbuilder-sheets
 ##########
 # SITE SETTINGS
 #
-# title of site appears in banner
-title: CollectionBuilder-Sheets
-# tagline, a short phrase that will appear throughout the site in the top banner
-tagline: a template for creating simple digital exhibits
+title of site appears in banner
+title: Desert Folk Art Paintings
+tagline, a short phrase that will appear throughout the site in the top banner
+tagline: exploring the American West through amateur art
 # description appears in meta tags and other locations
-# this description might appear in search result lists, keep around 160 characters max
-description: "CollectionBuilder-Sheets is a template for creating simple digital exhibit websites by loading collection metadata directly from a CSV, designed for teaching digital library skills."
-# creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
-author: CollectionBuilder
+this description might appear in search result lists, keep around 160 characters max
+description: "what can folk art tell us about the American West?"
+creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
+author: U.W.M.L.I.S.
 
 ##########
 # COLLECTION SETTINGS
