--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # on GitHub Pages it is your github repository's name prefixed with a /
 #baseurl: /clisdigital.github.io
 # location of code, the full url to your github repository
-source-code: https://github.com/CollectionBuilder/collectionbuilder-sheets
+source-code: lisdigital.github.io/folk-art/
 
 ##########
 # SITE SETTINGS
